[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/menu-font.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -80.0
margin_right = 63.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 3 )
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="VBoxContainer/StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
